# AgentCore

./: .actrc.example  .env.example  .env.mlflow.example  .env.test.template  .gitignore  AGENTS.md  CLAUDE.md  DEPENDENCIES.md  Dockerfile  Dockerfile.agent-runtime  Dockerfile.dspy  Dockerfile.test  GATE_TICKETS_006-014_IMPLEMENTATION_SUMMARY.md  ORCH-015_COMPLETION_SUMMARY.md  README.md  README_CLI.md  TOOL-012-SUMMARY.md  TOOL-TICKETS-COMPLETION-REPORT.md  docker-compose.agent-runtime.yml  docker-compose.dev.yml  docker-compose.mlflow.yml  docker-compose.monitoring.yml  docker-compose.test.yml  pyproject.toml  pytest.ini  test-agent-core  test-agentcore
.docs/: PROGRESS_REPORT.md  PR_DESCRIPTION.md  SYNC_REPORT.md  TICKET_FIX_REPORT.md
.github/workflows/: a2a-load-test.yml  benchmark.yml  dependency-validation.yml  dspy-deployment.yml  integration-load-test.yml  publish-pypi.yml
.sage/tickets/: A2A-001.md  A2A-002.md  A2A-003.md  A2A-004.md  A2A-005.md  A2A-006.md  A2A-007.md  A2A-008.md  A2A-009.md  A2A-010.md  A2A-011.md  A2A-016.md  A2A-017.md  A2A-018.md  A2A-019.md  A2A-020.md  A2A-021.md  ACE-001.md  ACE-002.md  ACE-003.md  ACE-004.md  ACE-005.md  ACE-006.md  ACE-007.md  ACE-008.md  ACE-009.md  ACE-010.md  ACE-011.md  ACE-012.md  ACE-013.md  ACE-014.md  ACE-015.md  ACE-016.md  ACE-017.md  ACE-018.md  ACE-019.md  ACE-020.md  ACE-021.md  ACE-022.md  ACE-023.md  (+307 more)
alembic/: env.py
alembic/versions/: 001_initial_a2a_schema.py  068b96d43e02_add_semantic_and_context_fields.py  0a8dea1094f6_enhance_tool_executions_schema.py  1650d535ae8a_add_training_tables.py  16ae5b2f867b_add_session_snapshots_table.py  2b034c2a4021_add_ace_compass_tables.py  54d726783080_add_timescaledb_compression_for_ace_.py  75a9ed5f9600_add_workflow_state_management.py  7a170db0b688_add_workflow_hooks_table.py  83591e23ca42_add_tool_execution_history_table.py  a5ce830ff941_add_updated_at_to_workflow_executions.py  acf3cb34fe9f_add_cqrs_tables_for_orchestration.py  b64aba14d716_merge_ace_and_modular_migrations.py  c03db99da40b_add_ace_cross_database_tables.py  c4e8f7d2a3b1_add_performance_metrics_table_compass_ace1.py  d1509698cef3_add_session_snapshots_table.py  e247cdc4c183_add_modular_executions_tables.py  e83e054db270_add_trace_id_to_modular_executions.py  e9ba324940b6_add_training_tables.py  f64c08721a0d_alter_training_tables_datetime_columns_.py  f9c3a8b2e1d4_add_memory_system_tables.py
deploy/: README.md
deploy/grafana/: gateway-overview-dashboard.json  realtime-dashboard.json  security-dashboard.json  service-performance-dashboard.json
deploy/prometheus/: alert-rules.yml
docker/python-sandbox/: Dockerfile  README.md  apparmor-profile  seccomp-profile.json
docs/: ace-compass-validation-report.md  ace-load-test-report.md  ace-operations-guide.md  ace-performance-tuning.md  agent-runtime-foundation.md  agent-templates.md  agentcore-architecture-and-development-plan.md  agentcore-strategic-roadmap.md  coordination-effectiveness-report.md  coordination-performance-report.md  dsp-jobqueue-bug-report.md  dsp-jobqueue-fix-report.md  dspy-best-practices.md  dspy-validation-report.md  mlflow-setup.md  model-selection-strategy.md  modular-agent-core-operations-guide.md  performance-test-report.md  quantifiable-impact-analysis.md  roadmap.md  strategic-intelligence.md  tool_integration_guide.md  tool_integration_implementation_summary.md  tool_integration_quick_reference.md
docs/api/: GETTING_STARTED.md  README.md  SDK_GENERATION.md  authentication.md  errors.md  getting-started.md  rate-limiting.md  realtime.md  reasoning.md  training-api.md
docs/architecture/: ERROR_HANDLING.md  MEMORY_SYSTEM_ARCHITECTURE_COMPARISON.md  MEMORY_SYSTEM_ENHANCEMENT_ANALYSIS.md  MONITORING_OBSERVABILITY.md  PERFORMANCE_OPTIMIZATION.md  PLUGIN_SYSTEM.md  RESOURCE_MANAGEMENT.md  STATE_PERSISTENCE.md  cli-migration-guide.md  cli-migration-learnings.md  cli-redesign-proposal.md  cli-testing-guide.md  cli-validation-report.md  training-system.md
docs/benchmarks/: llm-performance.md  results.json
docs/breakdown/: README.md  a2a-protocol.md  ace-integration.md  agent-runtime.md  cli-layer.md  dspy-optimization.md  gateway-layer.md  integration-layer.md  orchestration-engine.md
docs/cli/: CHANGELOG.md  CLI_REFERENCE.md  CONFIGURATION.md  PUBLISHING.md  README.md  TROUBLESHOOTING.md
docs/configuration/: reasoning-config.md
docs/coordination-service/: README.md
docs/deployment/: dspy-optimization.md  memory-service-production-deployment.md  post-launch-review.md  production-rollout.md  staging-deployment.md
docs/development/: INTEGRATION_ENDPOINTS_ISSUE.md  LOAD_TEST_FIX.md  LOCAL_WORKFLOW_TESTING.md  MIGRATION_FIXES_SUMMARY.md  README.md  WORKFLOW_ISSUES_FINAL_RESOLUTION.md
docs/dspy-optimization/: user-guide.md
docs/examples/: curl-examples.sh  javascript-client.js  python-client.py
docs/feature-requests/: cli-redesign.md
docs/gateway/: performance-optimization.md
docs/grafana/: llm_dashboard.json
docs/guides/: custom_rewards.md  training-agents.md
docs/portal/: index.html
examples/: utility_tools_demo.py
grafana/: README.md  ace_dashboard.json
k8s/: README.md  configmap.yaml  deployment.yaml  dspy-configmap.yaml  dspy-deployment.yaml  dspy-hpa.yaml  dspy-secret.yaml  dspy-service.yaml  dspy-serviceaccount.yaml  dspy-servicemonitor.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  training-worker-hpa.yaml
monitoring/: README.md  alertmanager.yml  grafana-datasources.yml  prometheus-reasoning-rules.yaml  prometheus-rules.yaml  prometheus.yml
prometheus/: ace_metrics.yml
scripts/: README.md  benchmark_coordination.py  benchmark_llm.py  benchmark_llm_comprehensive.py  generate-sdk.sh  init_qdrant_collections.py  security_audit_llm.py  security_audit_runtime.py  seed_memory_data.py  test-all.sh  test-fast.sh  test-integration.sh  test-migrations.sh  test_runner.py  validate_pinned_versions.py  verify-package.sh  verify_model_availability.py
tests/: QUICK_START.md  README.md  __init__.py  conftest.py  run_tests.py  test_container.py
(+1264 files in other folders)
