[project]
name = "agentcore"
version = "0.1.0"
description = "Open-source orchestration framework for agentic AI systems built on Google's A2A protocol"
authors = [
    {name = "AgentCore Team", email = "team@agentcore.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "fastapi-websocket-rpc>=0.1.25",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.11.0",
    "uvloop>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sentence-transformers>=5.1.1",
    "pgvector>=0.4.1",
    "docker>=7.1.0",
    "aiodocker>=0.24.0",
    "restrictedpython>=8.0",
    "networkx>=3.2",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "portkey-ai>=1.15.1",
    "tiktoken>=0.12.0",
    "bandit>=1.8.6",
    "sse-starlette>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[redis]>=3.7.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[redis]>=3.7.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "PIE", "T20", "PT"]
ignore = ["E501", "S101"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentcore", "src/agentcore_cli"]

[project.scripts]
agentcore = "agentcore_cli.main:cli_main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.41.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "testcontainers[redis]>=4.13.1",
]
