[project]
name = "agentcore-sdk"
version = "0.1.1"
description = "Open-source orchestration framework for agentic AI systems with multi-agent coordination, tool integration, and workflow management"
authors = [
    {name = "AgentCore Team", email = "team@agentcore.ai"}
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"
keywords = [
    "ai",
    "agents",
    "orchestration",
    "a2a",
    "agent2agent",
    "llm",
    "automation",
    "workflow",
    "cli",
    "fastapi",
    "jsonrpc",
    "multi-agent",
    "agent-framework",
    "distributed-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "fastapi-websocket-rpc>=0.1.25",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx[http2]==0.24.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.11.0",
    "uvloop>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sentence-transformers>=5.1.1",
    "pgvector>=0.4.1",
    "docker>=7.1.0",
    "aiodocker>=0.24.0",
    "restrictedpython>=8.0",
    "networkx>=3.2",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "portkey-ai>=1.15.1",
    "tiktoken>=0.12.0",
    "bandit>=1.8.6",
    "sse-starlette>=3.0.2",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "openai==1.54.0",
    "anthropic==0.40.0",
    "google-generativeai==0.8.3",
    "aiosqlite>=0.21.0",
    "dspy-ai>=2.5.43",
    "cloudpickle>=3.1.1",
    "mlflow>=3.5.1",
    "torch>=2.9.0",
    "psutil>=7.1.0",
    "pytest-rerunfailures>=16.1",
    "scipy>=1.16.2",
    "qdrant-client>=1.7.0",
    "testcontainers>=4.0.0",
    "neo4j>=5.15.0",
    "croniter>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Mathews-Tom/AgentCore"
Documentation = "https://github.com/Mathews-Tom/AgentCore#readme"
Repository = "https://github.com/Mathews-Tom/AgentCore"
Issues = "https://github.com/Mathews-Tom/AgentCore/issues"
Changelog = "https://github.com/Mathews-Tom/AgentCore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[redis]>=3.7.0",
    "testcontainers[neo4j]>=4.0.0",
    "httpx==0.24.1",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[redis]>=3.7.0",
    "httpx==0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "PIE", "T20", "PT"]
ignore = ["E501", "S101"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
markers = [
    "parallel_safe: Tests that can safely run in parallel",
    "sequential: Tests that must run sequentially",
    "external_api: Tests that depend on external APIs (may be flaky)",
    "tracing: Tests that use OpenTelemetry tracing infrastructure",
]
filterwarnings = [
    # Suppress third-party library deprecation warnings we cannot fix
    "ignore:The wait_for_logs function with string.*:DeprecationWarning:testcontainers",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentcore", "src/agentcore_cli"]

[project.scripts]
agentcore = "agentcore_cli.main:cli_main"

[dependency-groups]
dev = [
    "fakeredis>=2.32.0",
    "httpx==0.24.1",
    "locust>=2.41.2",
    "memory-profiler>=0.61.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "respx==0.21.1",
    "ruff>=0.13.2",
    "testcontainers[redis]>=4.13.1",
    "testcontainers[neo4j]>=4.13.1",
    "types-requests>=2.32.4.20250913",
    "websockets>=15.0.1",
]
